[tool.poetry]
name = "reidun"
version = "0.2.0"
description = ""
authors = ["Eleanor Young <developer@nausicaea.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = '^3'
marshmallow-dataclass = { version = '^8', extras = ['enum', 'union'] }
yarl = '^1'
aiohttp = '^3'

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-asyncio = "^0.19"
Flask = {version = "^2.2.2", extras = ["async"]}
http-server-mock = '^1'
Flask-HTTPAuth = '^4'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
