[tool.poetry]
name = "reidun"
version = "0.5.4"
description = ""
authors = ["Eleanor Young <developer@nausicaea.net>"]
readme = "README.md"
license = "MIT"
packages = [{include = "reidun", from = "src"}]

[tool.poetry.extras]
cache = ["aiohttp-client-cache", "appdirs"]

[tool.poetry.dependencies]
python = "^3.10"
yarl = '^1'
aiohttp = '^3'
mashumaro = "^3.0.4"
appdirs = {version = "^1.4.4", optional = true}
aiohttp-client-cache = {version = "^0.7.3", optional = true, extras = ["sqlite"]}

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-asyncio = "^0.19"
Flask = {version = "^2.2.2", extras = ["async"]}
http-server-mock = '^1'
Flask-HTTPAuth = '^4'
flake8 = "^5.0.4"
flake8-isort = "^4.2.0"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[tool.flake8]
max-line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
