[tool.poetry]
name = "reidun"
version = "0.6.0"
description = "Reidun provides abstractions over REST APIs for clients"
authors = ["Eleanor Young <developer@nausicaea.net>"]
readme = "README.md"
license = "MIT"
packages = [{include = "reidun", from = "src"}]

[tool.poetry.extras]
cache = ["charmonium.cache"]

[tool.poetry.dependencies]
python = "^3.10"
yarl = '^1'
aiohttp = '^3'
mashumaro = "^3.0.4"
appdirs = {version = "^1.4.4"}
"charmonium.cache" = {version = "^1.2.11", optional = true}

[tool.poetry.dev-dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.4.0"
Flask = {version = "3.1.3", extras = ["async"]}
http-server-mock = '1.7'
Flask-HTTPAuth = '4.8.1'

[tool.flake8]
max-line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
